tests/invalid/MethodCall_Invalid_5.whiley
function f(int y) -> int[]:
    return [1, 2, 3, get()]

method get() -> int:
    return 1
